[gd_scene load_steps=4 format=3 uid="uid://dh2yuyicm60cp"]

[ext_resource type="Texture2D" uid="uid://dipx01bds300i" path="res://assets/card-games.png" id="1_322w8"]
[ext_resource type="Script" path="res://scripts/DeckUI.gd" id="1_q3hga"]

[sub_resource type="LabelSettings" id="LabelSettings_8dc6f"]
font_size = 200
font_color = Color(0, 0, 0, 1)

[node name="DeckUI" type="Control"]
custom_minimum_size = Vector2(2500, 3500)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_q3hga")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 1000)
layout_mode = 2
texture = ExtResource("1_322w8")
stretch_mode = 5

[node name="DeckName" type="Label" parent="MarginContainer/ColorRect/VBoxContainer"]
layout_mode = 2
text = "Deck Name"
label_settings = SubResource("LabelSettings_8dc6f")
horizontal_alignment = 1

[connection signal="gui_input" from="MarginContainer/ColorRect" to="." method="_on_color_rect_gui_input"]
